<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.Welcome"
    android:paddingTop="10dp"
    android:background="#ffffff">
   
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


       <ImageView
           android:layout_width="match_parent"
           android:layout_height="300dp"
           android:src="@drawable/flower" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/Slogan"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#020202"
            android:textSize="36dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="cursive"
            android:gravity="center"
            android:text="@string/tagLine"
            android:textColor="#151717"
            android:textSize="20sp"
            android:textStyle="bold" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            <Button
                android:id="@+id/logIn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimary"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/Signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/signupbtn"
                android:textColor="@color/colorAccent"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"/>




        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="About Us"
            android:background="#00000000"
            android:textColor="@color/colorAccent"
            android:layout_marginTop="10dp" />


    </LinearLayout>
        

</ScrollView>