<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DDEEA"
    android:padding="30dp"
    tools:context=".Admin.Signup2nd">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/signBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:onClick="backtoSignupActivity"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/SignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="#1B1919"
            android:textSize="40sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/muli_black"
            android:text="Choose Gender"
            android:textColor="@color/colorAccent"
            android:textSize="18sp"/>

            <RadioGroup
                android:id="@+id/grp_radio"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />

                <RadioButton
                    android:id="@+id/chhakka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_200_wali_mithai" />
            </RadioGroup>
            
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/colorAccent"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Select Your Age"
                android:fontFamily="@font/muli_black"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"/>
            <DatePicker
                android:id="@+id/date_picker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:datePickerMode="spinner"
                android:spinnersShown="true"
                android:calendarViewShown="false"/>


        </LinearLayout>
        <Button
            android:id="@+id/nextSignupActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:onClick="callNext"
            android:textSize="20sp"
            android:elevation="5dp"/>

    </LinearLayout>

</ScrollView>