<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DDEEA"
    tools:context=".Admin.otpVerification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:src="@drawable/close_icon"
            android:onClick="restartWelcomeScreen"
            android:tint="@color/colorAccent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:includeFontPadding="false"
            android:text="@string/co_nde"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="100sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/muli_black"
            android:includeFontPadding="false"
            android:text="@string/verification"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorAccent"
            android:textSize="29sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/muli"
            android:includeFontPadding="false"
            android:text="@string/enter_otp_send_to_917388900242"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="19sp" />

        <com.chaos.view.PinView
            android:id="@+id/pin_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:itemCount="6"
            app:itemWidth="40dp"
            app:itemHeight="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            app:lineColor="@color/colorAccent"
            android:itemBackground="#FAF9F9"
            style="@style/PinWidget.PinView"
            android:inputType="number"
            android:cursorVisible="true"
            app:cursorColor="@color/colorAccent"
            app:hideLineWhenFilled="true"
            app:itemRadius="5dp"
            />
        <Button
            android:id="@+id/OTP_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/verify_code"
              android:onClick="verifyOTP"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            />



    </LinearLayout>

</ScrollView>