<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DDEEA"
    android:padding="30dp"
    tools:context=".Admin.Signup3rd">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/signBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:onClick="backtoSignup2Activity"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/SignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="#1B1919"
            android:textSize="40sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="40dp">
            
            
            <com.hbb20.CountryCodePicker
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="true"
                android:padding="5dp"
                app:ccp_showFullName="true"
                android:background="@drawable/border_background"

                app:ccp_showNameCode="true"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_number"
                app:startIconDrawable="@drawable/phone_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorAccent"

                app:endIconTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:layout_height="match_parent"/>


            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <Button
            android:id="@+id/otpActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:onClick="otpScreen"
            android:layout_marginTop="10dp"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>