<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#6DDEEA"
    android:padding="30dp"
    tools:context=".Admin.Signup">
    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/signBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:onClick="backtoWelcomeScreen"
            android:src="@drawable/ic_baseline_arrow_back_24" />

        <TextView
            android:id="@+id/SignUpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:fontFamily="@font/muli_black"
            android:text="@string/signup"
            android:textAllCaps="true"
            android:textColor="#1B1919"
            android:textSize="40sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Full Name"
                app:startIconDrawable="@drawable/ic_baseline_edit_24"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorAccent"

                app:endIconTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="match_parent"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Username"
                app:startIconDrawable="@drawable/user_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorAccent"

                app:endIconTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="text"
                    android:layout_height="match_parent"/>


            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                app:startIconDrawable="@drawable/email_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                app:endIconMode="clear_text"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorAccent"

                app:endIconTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textEmailAddress"
                    android:layout_height="match_parent"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                app:startIconDrawable="@drawable/password_icon"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:startIconTint="@color/colorAccent"
                app:hintTextColor="@color/colorAccent"
                android:textColorHint="@color/colorAccent"
                app:endIconMode="password_toggle"
                app:boxStrokeWidthFocused="2dp"
                app:boxStrokeColor="@color/colorAccent"
                app:endIconTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:layout_height="match_parent"/>


            </com.google.android.material.textfield.TextInputLayout>





        </LinearLayout>
        <Button
            android:id="@+id/nextSignupActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/next"
            android:textColor="#ffffff"
            android:layout_marginTop="20dp"
            android:onClick="callNextScreen"
            android:textSize="20sp"
            android:elevation="5dp"/>

    </LinearLayout>

</ScrollView>